<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DialogActivity">

    <com.example.bigapp.layout.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/dialog_box" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/normal_dialog"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/normal_dialog" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/list_dialog"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/list_dialog" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/radio_dialog"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sex_dialog" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/check_dialog"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/workday_dialog" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_dialog"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/name_dialog" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/custom_dialog"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/custom_dialog" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>