<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.example.bigapp.layout.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/find"
        />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle"
        android:id="@+id/dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dialog_box"
        />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle"
        android:id="@+id/music_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/front_service"
        />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle"
        android:id="@+id/fingerprint_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_unlocking"
        android:layout_margin="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle"
        android:id="@+id/left_menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/left_menu_name"/>
    <androidx.appcompat.widget.AppCompatButton
        style="@style/ButtonStyle"
        android:id="@+id/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="高德地图"/>
</LinearLayout>