<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.RegisterActivity">
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/register"
        android:textSize="30sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/register_tips"
        android:textSize="20sp"
        />
    <EditText
        android:id="@+id/phone_number_register"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        android:hint="@string/edit_phone_number"
        android:textColorHint="#95A1AA"
        android:singleLine="true"
        android:inputType="phone"
        />
    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/register_edit_password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:singleLine="true"
        android:textColorHint="#95A1AA"
        android:inputType="textPassword"
        android:autofillHints=""
        />
    <EditText
        android:id="@+id/password_again_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/edit_password_again"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:singleLine="true"
        android:textColorHint="#95A1AA"
        android:inputType="textPassword"
        android:autofillHints=""
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_register"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register" />
</LinearLayout>