<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.LoginActivity">
    <TextView
        android:id="@+id/register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/register"
        android:textSize="20sp"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:layout_marginVertical="30dp"
        android:src="@drawable/dog" />

    <EditText
        android:id="@+id/phone_number_login"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        android:hint="@string/edit_phone_number"
        android:textColorHint="#95A1AA"
        android:singleLine="true"
        android:inputType="phone"
        />
    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/edit_password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        android:singleLine="true"
        android:textColorHint="#95A1AA"
        android:inputType="textPassword"
        android:autofillHints=""
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_login"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_button" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:background="@color/purple_200"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_login_methods"/>
        <View
            android:layout_width="60dp"
            android:layout_height="1dp"
            android:background="@color/purple_200"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="25dp"
            android:src="@drawable/login_qq_ic"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="25dp"
            android:src="@drawable/login_wechat_ic"/>
    </LinearLayout>
</LinearLayout>