<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <com.example.bigapp.layout.TitleBar
        android:id="@+id/note_fragment_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/note"
        app:left_icon="@drawable/arrow_back"
        app:right_icon="@drawable/delete"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/title_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_margin="10dp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/time_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_marginStart="10dp"
        android:text="@string/content"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_margin="10dp"
        android:id="@+id/content_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>